fix: backrop filter blur not working on safari

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ nav {
   padding: 8px 0;
   position: fixed;
   top: 0;
+  -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
   background-color: rgba(0, 0, 0, 0.4);
   box-shadow: 0 12px 25px 8px #000000;
